--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         jcenter()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
 
@@ -15,6 +16,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories"
+        }
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
